uso de display Flex para los elementos del Header

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 
                 
 
-                <div class="div-standarmedida">
+                <div class="div-justifycolumn">
                     <div class="fondo-background">
                         <span>Ofertas ver todas</span>
                     </div>
