se crea la clase y se  pone fuente a los span principales de la seccion uno

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <img src="/media/logos/credit-card.svg.svg" alt="tarjeta de crédito">
                             </div>
                             <div class="div-verticalseccionuno">
-                                <span>Hasta 48 cuotas</span>
+                                <span class="span-principalseccionuno">Hasta 48 cuotas</span>
                                  <span>ver más</span>
                             </div>                             
                         </div>
@@ -81,7 +81,7 @@
                                 <img src="/media/logos/transfer.svg.svg" alt="transacción">
                             </div>
                             <div class="div-verticalseccionuno">
-                                <span>Transferencia desde tu banco</span>
+                                <span class="span-principalseccionuno">Transferencia desde tu banco</span>
                                 <span>ver más</span>
                             </div>                         
                         </div>
@@ -90,7 +90,7 @@
                                 <img src="/media/logos/payment-agreement.svg.svg" alt="pagos">
                             </div>
                             <div class="div-verticalseccionuno">
-                                <span>Paga en efectivo</span>
+                                <span class="span-principalseccionuno">Paga en efectivo</span>
                                 <span>ver más</span>
                             </div>                          
                         </div>
@@ -99,7 +99,7 @@
                                 <img src="/media/logos/view-more.svg.svg" alt="ver más">
                             </div>
                             <div class="div-verticalseccionuno">
-                                <span>Más medios de pago</span>
+                                <span class="span-principalseccionuno">Más medios de pago</span>
                                 <span>ver más</span>
                             </div>                            
                         </div>                            
