se crea la clase y se aplica fuente a los span secundarios sección uno

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </div>
                             <div class="div-verticalseccionuno">
                                 <span class="span-principalseccionuno">Hasta 48 cuotas</span>
-                                 <span>ver más</span>
+                                 <span class="span-secundarioseccionuno">ver más</span>
                             </div>                             
                         </div>
                         <div class="div-flexseccionuno">
@@ -82,7 +82,7 @@
                             </div>
                             <div class="div-verticalseccionuno">
                                 <span class="span-principalseccionuno">Transferencia desde tu banco</span>
-                                <span>ver más</span>
+                                <span class="span-secundarioseccionuno">ver más</span>
                             </div>                         
                         </div>
                         <div class="div-flexseccionuno">
@@ -91,7 +91,7 @@
                             </div>
                             <div class="div-verticalseccionuno">
                                 <span class="span-principalseccionuno">Paga en efectivo</span>
-                                <span>ver más</span>
+                                <span class="span-secundarioseccionuno">ver más</span>
                             </div>                          
                         </div>
                         <div class="div-flexseccionuno">
@@ -100,7 +100,7 @@
                             </div>
                             <div class="div-verticalseccionuno">
                                 <span class="span-principalseccionuno">Más medios de pago</span>
-                                <span>ver más</span>
+                                <span class="span-secundarioseccionuno">ver más</span>
                             </div>                            
                         </div>                            
                     </div>
