se agregan margenes a los div que continen las ofertas en la seccion dos

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                 
                 
 
-                <div class="div-justifycolumn">
-                    <div class="fondo-background">
+                <div class="div-secciondos">
+                    <div>
                         <span>Ofertas ver todas</span>
                     </div>
-                    <div class="div-flex">
-                        <div>
+                    <div class="div-flexsecciondos">
+                        <div class="div-margenofertas">
                             <div>
                                 <img src="/media/logos/sillaEjecutiva.svg" alt="silla ejecutiva">
                                 <div class="fondo-blanco">
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="div-margenofertas">
                             <div>
                                 <img src="/media/logos/micrófono.svg" alt="micrófono">
                                 <div class="fondo-blanco">
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="div-margenofertas">
                             <div>
                                 <img src="/media/logos/afeitadora.svg" alt="afeitadora">
                                 <div class="fondo-blanco">
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="div-margenofertas">
                             <div>
                                 <img src="/media/logos/closet.svg" alt="closet">
                                 <div class="fondo-blanco">
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="div-margenofertas">
                             <div>
                                 <img src="/media/logos/cortina.svg" alt="cortina">
                                 <div class="fondo-blanco">
